--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,46 +1,100 @@
 <resources>
-    <string name="app_name" translatable="false">MySync</string>
+    <string name="app_name" translatable="false">myRSync</string>
     <string name="settings">Settings</string>
-    <string name="button_save">Save</string>
     <string name="srv_settings">Server Settings</string>
     <string name="loc_settings">Local Settings</string>
-    <string name="log">Log File</string>
     <string name="opt">Rsync Options</string>
-    <string name="path">Local Path</string>
-    <string name="Net_ssid">Network SSID</string>
     <string name="srv_ip">Server IP Address</string>
     <string name="srv_mod">Rsync Server Mod</string>
     <string name="rsync_user">Rsync User</string>
     <string name="srv_port">Port</string>
-    <string name="add_but">Add</string>
     <string name="add_path">Add Path</string>
-    <string name="get_ssid">Get Current SSID</string>
-    <string name="about">This application is just a wrapper for rsync. This program may be useful for people that want to implement a simple rsync solution in their LAN. The interface is just a front-end for the rsync command that runs in the background.</string>
-    <string name="how_to_use">Enter the rsync server details.</string>
+    <string name="about">
+        Dear User,\n
+        Thank you for downloading and using this application, I hope that it will help you with your project.\n\n
+        My name is Socrates Chouridis and I developed this app with painstaking effort as I had no previous knowledge of Java or Android development \n\n
+
+        However, I offer this application completely free and with no ads. If by any means you found this application useful and helped you to achieve your goal, then please consider leaving a positive rating
+        or donating any amount you believe fair by using the link https://paypal.me/myrsync .\n\n
+
+        If you need to contact me for bug reporting or anything related to this application then please send an email to myrsync@protonmail.com\n\n
+
+        The rsync binary was compiled by using its original unmodified source code, version 3.1.3. More information regarding the rsync application can be found here:
+        https://rsync.samba.org\n\n
+
+        myRSync is free, open source and it is distributed under the GPLv3. If you want to contribute you can find it here:\n\n
+        https://github.com/socratesx/mysync \n\n
+
+        Disclaimer: The author of this application may not be help responsible for any improper usage of this application, resulting in any kind of data loss.
+        If you are not familiar with the rsync, it is strongly advised to read its documentation before using it.
+    </string>
+
     <string name="rs_opt">Rsync Options</string>
     <string name="a">-a</string>
     <string name="v">-v</string>
     <string name="z">-z</string>
     <string name="r">-r</string>
-    <string name="help">How to use this Application\n 1.Server Settings:\n\ta.Server IP Address: Fill in the server\'s listening LAN address (e.g 192.168.1.100). Next, type the listening port (default 873).
-        If you leave this field empty the default port will be used. \n\tb.Rsync User: Enter the user that is permitted to connect to the rsync server.
-        \n\tc.Rsync Server Mod: Type the name of the rsync module that you want to connect to. \n\n2.Local Settings: \n\ta.
-        Add Path: Select the folder that you want to sync with the rsync server. \n\n3. Select the rsync options</string>
+    <string name="help">
+        This simple Application is intended to be a convenient way to create and schedule an rsync command in order to synchronize local folders with a server that is running an rsync daemon.
+        It is an ideal solution for people that need to implement a custom cloud file backup in their network so to have total control over where their files are stored. \n\n
+        <h3>How to use this app:</h3>\n\n
+         1. Create Rsync Configurations.\n
+         2. Run them on demand, or create Schedulers attached to them.\n
+         3. Check the Overview for details regarding each scheduler/configuration pair.\n
+         4. Check the Log for the rsync log entries.\n\n\n
+    </string>
     <string name="rsync_options">\n\t -v, increase verbosity \n\t -q, suppress non-error messages \n\t -a, archive mode; equals -rlptgoD  \n\t  -z, compress file data during the transfer \n\t
         -r, recurse into directories \n\t -u, skip files that are newer on the receiver \n\t -p, preserve permissions \n\t -o, preserve owner (super-user only) \n\t -g, preserve group \n\t -t,
-        preserve modification times \n\t -n, perform a trial run with no changes made (dry run) \n\t -m, prune empty directory chains from file-list \n\t -O, omit directories from --times
+        preserve modification times \n\t -n, perform a trial run with no changes made (dry run) \n\t -m, prune empty directory chains from file-list \n\t -O, omit directories from —times
         </string>
+
+    <string name="rsync_daemon_info">
+        Use this form to build an rsync configuration. Before creating any configuration, you must ensure that an rsync daemon is up and running.
+        For more details on how to setup and configure the rsync daemon please visit https://download.samba.org/pub/rsync/rsyncd.conf.html \n\n
+
+        This tool will be using the following format of the rsync command:\n\n
+        <b>rsync [OPTION…] SRC… rsync://[USER@]HOST[:PORT]/DEST</b>\n\n
+
+        With this form you actually build the rsync command by defining the OPTION…, SRC…, USER, HOST, PORT, and DEST Variables \n\n
+        OPTION… = This is options string that is formed from the OPTIONS checkboxes. \n
+        SRC… = Local Directory Path to be Synced \n
+        USER = Authorized Username to connect to the rsync daemon module. \n
+        HOST = The IP Address of the server running the rsync Daemon. \n
+        PORT = The default port is 873 but may be overriden here if it is different. \n
+        DEST = The module name as it is configured in rsync daemon configuration file. \n\n
+
+        <h3>How to Use this Form:</h3>\n\n
+         1. Enter the IPv4 address of the server where the rsync daemon is running on. \n\n
+         2. Enter the port where the daemon is accepting connections. If the field is left blank then the default port(TCP:873) will be used.\n\n
+         3. Type the username that is allowed to connect to the configured module that is described in the confd.conf file of the rsync daemon.\n\n
+         4. Type the name of the configured module.\n\n
+         5. Click the \'Add Path\' button to select the local directory that will be synced with the daemon.\n\n
+         6. Tick the options that will be used with the rsync command. For more info regarding the options and how they are used you can click on the \'?\' button.\n\n
+         7. Tap on the \'View Command\' to check the final command that will be run. This step is optional.\n\n
+         8. Click on the \'Save\' button to save the configuration. Following this step the configuration will appear on the second tab where you can click on it to edit it or run it.
+        Also it will be available to select it in the Scheduler creation form. \n\n\n
+    </string>
+
+
     <string name="save_and_view_command">Save and View Command</string>
-    <string name="save_configuration">Save Configuration</string>
     <string name="generated_rsync_command">Generated Rsync Command:</string>
     <string name="title_activity_add_config">Add Rsync Configuration</string>
     <string name="save">Save</string>
     <string name="view_command">View Command</string>
-    <string name="edit_config">Edit</string>
     <string name="delete">Delete</string>
-    <string name="edit">Edit</string>
     <string name="no_data">No Configurations</string>
     <string name="no_schedulers">No Schedulers</string>
+    <string name="scheduler_info">
+        Create a Scheduler that will run repeatedly at the selected time and days. \n\n\
+        1. Give a Name to your Scheduler\n\n\
+        2. Use the drop-down list to select the rsync Configuration that will be executed with this Scheduler. \n\n\
+        If the list is empty then you need to create a configuration first before creating the scheduler.\n\n\
+        3. Use the clock to select the time that the rsync command will run. Note: Due to android\'s battery optimizations the timer is not exact and may have a few minutes delay.\n\n\
+        4. Select the days of the week that the rsync command will run. By default all days are selected.\n\n\
+        5. Save the Scheduler. Following this step the Scheduler will be listed on the \'Schedulers\' Tab, where you can click on it to edit it, and in \'Overview\' Tab
+        where you can get quick information of the task.\n\n\
+
+    </string>
     <string name="Monday">M</string>
     <string name="Tuesday">T</string>
     <string name="Wednesday">W</string>
@@ -48,88 +102,24 @@
     <string name="Friday">F</string>
     <string name="Saturday">S</string>
     <string name="Sunday">S</string>
-    <string name="create_schedule">Create Schedule</string>
     <string name="app_about">About</string>
     <string name="exit">Exit</string>
     <string name="app_help">Help</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
-
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
-
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
 
     <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
-    <string-array name="list_preference_entry_values">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
-
-    <string-array name="multi_select_list_preference_default_value" />
-
-    <string name="pref_title_system_sync_settings">System sync settings</string>
 
     <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
 
     <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="notifications">Notifications</string>
-    <string name="display_a_notification_when_an_rsync_job_starts">Display a Notification When an Rsync Job Starts</string>
-    <string name="notifications_off">Notifications Off</string>
-    <string name="notifications_on">Notifications On</string>
 </resources>
