--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,49 @@
     <string name="rsync_user">Rsync User</string>
     <string name="srv_port">Port</string>
     <string name="add_path">Add Path</string>
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="notifications">Notifications</string>
+    <string name="start_time">Start Time:</string>
+    <string name="repeat">Repeat:</string>
+    <string name="edit_scheduler">Edit Scheduler</string>
+    <string name="configuration_name">Configuration Name</string>
+    <string name="n">-n</string>
+    <string name="g">-g</string>
+    <string name="options_help">options help</string>
+    <string name="run_now">Run Now!</string>
+    <string name="set_scheduler_options">Set Scheduler Options</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="pick_a_time">Pick a Time</string>
+    <string name="select_configuration">Select Configuration</string>
+    <string name="scheduler_name">Scheduler Name</string>
+    <string name="next_run">Next Run:</string>
+    <string name="last_run">Last Run:</string>
+    <string name="last_result">Last Result:</string>
+    <string name="never_run">Never Run</string>
+    <string name="error">error</string>
+    <string name="success">Success</string>
+    <string name="overview">Overview</string>
+    <string name="create_a_configuration_and_add_a_scheduler">Create a Configuration and Add a Scheduler</string>
+    <string name="export">Export</string>
+    <string name="clear_log">Clear Log</string>
+    <string name="change_path">Change Path</string>
+    <string name="running">Running</string>
+    <string name="rs_opt">Rsync Options</string>
+    <string name="save_and_view_command">Save and View Command</string>
+    <string name="generated_rsync_command">Generated Rsync Command:</string>
+    <string name="title_activity_add_config">Add Rsync Configuration</string>
+    <string name="save">Save</string>
+    <string name="view_command">View Command</string>
+    <string name="delete">Delete</string>
+    <string name="no_data">No Configurations</string>
+    <string name="no_schedulers">No Schedulers</string>
+    <string name="app_about">About</string>
+    <string name="exit">Exit</string>
+    <string name="app_help">Help</string>
+    <string name="title_activity_settings">Settings</string>
+
     <string name="about">
         Dear User,\n
         Thank you for downloading and using this application, I hope that it will help you with your project.\n\n
@@ -28,12 +71,6 @@
         Disclaimer: The author of this application may not be help responsible for any improper usage of this application, resulting in any kind of data loss.
         If you are not familiar with the rsync, it is strongly advised to read its documentation before using it.
     </string>
-
-    <string name="rs_opt">Rsync Options</string>
-    <string name="a">-a</string>
-    <string name="v">-v</string>
-    <string name="z">-z</string>
-    <string name="r">-r</string>
     <string name="help">
         This simple Application is intended to be a convenient way to create and schedule an rsync command in order to synchronize local folders with a server that is running an rsync daemon.
         It is an ideal solution for people that need to implement a custom cloud file backup in their network so to have total control over where their files are stored. \n\n
@@ -46,8 +83,7 @@
     <string name="rsync_options">\n\t -v, increase verbosity \n\t -q, suppress non-error messages \n\t -a, archive mode; equals -rlptgoD  \n\t  -z, compress file data during the transfer \n\t
         -r, recurse into directories \n\t -u, skip files that are newer on the receiver \n\t -p, preserve permissions \n\t -o, preserve owner (super-user only) \n\t -g, preserve group \n\t -t,
         preserve modification times \n\t -n, perform a trial run with no changes made (dry run) \n\t -m, prune empty directory chains from file-list \n\t -O, omit directories from —times
-        </string>
-
+    </string>
     <string name="rsync_daemon_info">
         Use this form to build an rsync configuration. Before creating any configuration, you must ensure that an rsync daemon is up and running.
         For more details on how to setup and configure the rsync daemon please visit https://download.samba.org/pub/rsync/rsyncd.conf.html \n\n
@@ -74,16 +110,6 @@
          8. Click on the \'Save\' button to save the configuration. Following this step the configuration will appear on the second tab where you can click on it to edit it or run it.
         Also it will be available to select it in the Scheduler creation form. \n\n\n
     </string>
-
-
-    <string name="save_and_view_command">Save and View Command</string>
-    <string name="generated_rsync_command">Generated Rsync Command:</string>
-    <string name="title_activity_add_config">Add Rsync Configuration</string>
-    <string name="save">Save</string>
-    <string name="view_command">View Command</string>
-    <string name="delete">Delete</string>
-    <string name="no_data">No Configurations</string>
-    <string name="no_schedulers">No Schedulers</string>
     <string name="scheduler_info">
         Create a Scheduler that will run repeatedly at the selected time and days. \n\n\
         1. Give a Name to your Scheduler\n\n\
@@ -93,33 +119,7 @@
         4. Select the days of the week that the rsync command will run. By default all days are selected.\n\n\
         5. Save the Scheduler. Following this step the Scheduler will be listed on the \'Schedulers\' Tab, where you can click on it to edit it, and in \'Overview\' Tab
         where you can get quick information of the task.\n\n\
-
     </string>
-    <string name="Monday">M</string>
-    <string name="Tuesday">T</string>
-    <string name="Wednesday">W</string>
-    <string name="Thursday">T</string>
-    <string name="Friday">F</string>
-    <string name="Saturday">S</string>
-    <string name="Sunday">S</string>
-    <string name="app_about">About</string>
-    <string name="exit">Exit</string>
-    <string name="app_help">Help</string>
+    <string name="info">Info button</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="title_activity_settings">Settings</string>
-
-    <!-- Strings related to Settings -->
-
-    <!-- Example General settings -->
-
-    <!-- Example settings for Data & Sync -->
-
-    <!-- Example settings for Notifications -->
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
-    <string name="notifications">Notifications</string>
 </resources>
